.provarCaches/00D5h000009Q6XQEA0/objects/provar__Test_Manager_Settings__mdt.object
<CustomObject>
    <description>Various settings to configure how Provar Manager works.</description>
    <fields>
        <fullName>provar__Delete_Coverage_Reports_Older_Than__c</fullName>
        <label>Delete Coverage Reports Older Than</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>provar__Delete_Test_Cycles_Older_Than__c</fullName>
        <inlineHelpText>Number of days</inlineHelpText>
        <label>Delete Test Cycles Older Than</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>provar__Delete_Test_Step_Executions_Older_Than__c</fullName>
        <inlineHelpText>Number of days</inlineHelpText>
        <label>Delete Test Step Executions Older Than</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>provar__Enable_Azure_DevOps_API_Connection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Azure DevOps API Connection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Enable_Bitbucket_API_Connection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Bitbucket API Connection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Enable_GitHub_API_Connection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable GitHub API Connection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Enable_GitLab_API_Connection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable GitLab API Connection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Enable_OpenAI_API_Connection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable OpenAI API Connection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Enable_Provar_Manager_API__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Provar Manager API</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Enable_Slack_API_Connection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Slack API Connection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__OpenAI_API_Key__c</fullName>
        <label>OpenAI API Key</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>provar__Provar_Automation_License_Key__c</fullName>
        <label>Provar Automation License Key</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>provar__Provar_Grid_API_Key__c</fullName>
        <label>Provar Grid API Key</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>provar__Provar_Grid_Username__c</fullName>
        <label>Provar Grid Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Provar_Manager_API_Authentication_Method__c</fullName>
        <label>Provar Manager API Authentication Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>API Key</fullName>
                </value>
                <value>
                    <fullName>OAuth 2.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Provar_Manager_API_Key__c</fullName>
        <label>Provar Manager API Key</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Provar Manager Settings</label>
    <pluralLabel>Provar Manager Settings</pluralLabel>
</CustomObject>